plaid/force-app/main/default/objects/Plaid_Connection__c/Plaid_Connection__c.object-meta.xml
<CustomObject>
    <label>Plaid Connection</label>
    <pluralLabel>Plaid Connections</pluralLabel>
    <nameField>
        <label>Connection Name</label>
        <displayFormat>PC-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>