plaid/force-app/main/default/objects/Plaid_Connection__c/fields/Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Item_Id__c</fullName>
    <label>Item ID</label>
    <type>Text</type>
    <length>255</length>
</CustomField>