plaid/force-app/main/default/objects/Plaid_Connection__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Plaid Connections</relationshipLabel>
    <relationshipName>Plaid_Connections</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>